@@ -3,7 +3,6 @@ package pl.zakrzewski.restapi.model;
 import pl.zakrzewski.restapi.model.dto.ComplaintDto;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ComplaintDtoMapper {
 
@@ -14,7 +13,7 @@ public class ComplaintDtoMapper {
     public static List<ComplaintDto> mapToComplaintDtos(List<Complaint> complaints) {
         return complaints.stream()
                 .map(complaint -> mapToComplaintDto(complaint))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static ComplaintDto mapToComplaintDto(Complaint complaint) {
